# Advanced-text-2-sql-multiagent-workflows

./: .env.example  .gitignore  README.md  TESTING_GUIDE.md  implementation_plan.md  pyproject.toml  task.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
agents/: __init__.py
agents/nodes/: __init__.py  correction_plan.py  correction_sql.py  evaluator.py  executor.py  formatter.py  gatekeeper.py  hitl.py  query_planner.py  schema_linker.py  sql_generator.py
config/: config.yaml  error-taxonomy.json  pinecone_config.yaml  safety_config.yaml
database/: __init__.py  manager.py  safety.py  schema_utils.py
database/connectors/: __init__.py  base.py  duckdb_connector.py  mysql_connector.py  postgresql_connector.py  sqlite_connector.py
evaluation/: __init__.py
graph/: __init__.py  builder.py  conditions.py  state.py
llm/: __init__.py  fallback.py  groq_client.py  openai_client.py  usage_tracker.py
memory/: __init__.py
streamlit_app/: __init__.py  app.py
streamlit_app/components/: charts.py  chat.py  debug_panel.py  sidebar.py
streamlit_app/styles/: custom.css
tests/: conftest.py  test_structure.py
tests/agents/: conftest.py  test_correction.py  test_error_parser.py  test_executor.py  test_gatekeeper.py  test_hitl.py  test_query_planner.py  test_schema_linker.py  test_sql_generator.py
tests/database/: test_base_connector.py  test_manager.py  test_pg_mysql_connectors.py
tests/graph/: conftest.py  test_graph.py  (+1 more)
utils/: __init__.py  error_parser.py
vector/: __init__.py  embeddings.py  retriever.py  schema_graph.py
(+54 files in other folders)
